RESOLVED FIXED314334
Fix Windows build by explicitly including <intrin.h> in Algorithm.h
https://bugs.webkit.org/show_bug.cgi?id=314334
Summary Fix Windows build by explicitly including <intrin.h> in Algorithm.h
zak ridouh
Reported 2026-05-07 11:57:11 PDT
Fix the windows build after some recent changes caused it to not build.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-07 11:57:18 PDT
zak ridouh
Comment 2 2026-05-07 11:59:29 PDT
EWS
Comment 3 2026-05-07 13:17:12 PDT
Committed 312825@main (e8e25c8f6ce3): <https://commits.webkit.org/312825@main> Reviewed commits have been landed. Closing PR #64485 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.