Fix Windows build by explicitly including <intrin.h> in Algorithm.h https://bugs.webkit.org/show_bug.cgi?id=314334 rdar://176484212

Unreviewed build fix.

312725@main removed several STL headers from Algorithm.h, Gigacage.h,
and Sizes.h that clangd reported as unused. On MSVC's STL, <algorithm>,
<chrono>, and <bit> transitively include <intrin.h>; with those gone,
the _BitScanForward64 call in ctz() at Algorithm.h:213 no longer has
a declaration in scope and fails with -Werror=implicit-function-declaration
on Windows. libc++ and libstdc++ don't have this transitive path, which
is why clangd didn't flag it.

Make the dependency explicit rather than re-adding an incidental STL
header.

* Source/bmalloc/bmalloc/Algorithm.h:

Canonical link: https://commits.webkit.org/312825@main